Kleopatra: Wrong focus/tab order in directory services configuration
Testing, NormalPublic

Assigned To
Authored By
ikloecker
Oct 7 2025, 4:44 PM

Description

The tab order of the X.509 directory services configuration should be

  • List
  • Add button
  • Edit button
  • Delete button

Actual: The List is between the Add button and the Edit button

Event Timeline

ikloecker created this task.
ikloecker moved this task from Backlog to WIP on the gpd5x board.
ikloecker changed the task status from Open to Testing.Oct 7 2025, 5:27 PM
ikloecker mentioned this in Unknown Object (Maniphest Task).Oct 13 2025, 9:49 AM
ikloecker moved this task from Backlog to WIP on the vsd34 board.

Backported for VSD 3.4

ikloecker mentioned this in Unknown Object (Maniphest Task).Oct 20 2025, 9:38 AM
timegrid added a subscriber: timegrid.

Looks good to me on gpg4win-5.0.0-beta395 @ win11