Fix tab order of directory services widget

The Add button was before the list widget in the tab order which was
wrong.

GnuPG-bug-id: 7846